@@ -1,0 +1,1 @@
+<a href="$URL?width=$WIDTH">&laquo; prev</a>
