@@ -1,30 +1,30 @@
 <div id="page">
-  <div id="menu">
-$MENU
+  <div id="title">
+    $MENU
   </div>
+
+  <div id="menu">
+$BACK - <a href="./">up</a> - $NEXT</div>
   <div>
     <table>
       <tr>
+
         <td colspan="3" id="picture">
-						<center class="nav">
-						Viewing picture $NUMBER of $TOTAL at $RESOLUTION pixels<br>
-            <img src="$SRC"><br>
-            Size [ $SIZES ]<br>
-						Slideshow [ $SLIDESHOW ]
+          IMG $NUMBER of $TOTAL $EXIFVALUES <br><br>
+          <img src="$SRC"><br><br>
+[ Size: $SIZES | Slideshow: $SLIDESHOW ]</td>
+
+              </tr>
+              $PICTUREINFO
+            </table>
           </center>
         </td>
-      </tr>
-      <tr>
-        <td align="left" width="20%">$BACK</td>
-
-				$PICTUREINFO
-
-        <td align="right" width="20%">$NEXT</td>
       </tr>
 	  <tr>
 	  	<td colspan="3">
 		  <div id="gallery">
-		    Indexed by <a href="http://apachegallery.dk">Apache::Gallery</a> - Copyright &copy; 2001-2003 Michael Legart - <a href="http://www.hestdesign.com/">Hest Design!</a>
+		  <a href="http://apachegallery.dk/">Apache::Gallery</a> &copy; 2001-2003 Michael Legart, <a href="http://www.hestdesign.com/">Hest Design</a>
+
 		  </div>
 		</td>
 	  </tr>
